--- a/css/lucy-xu.webflow.css
+++ b/css/lucy-xu.webflow.css
@@ -22,7 +22,7 @@ a {
 }
 
 .body {
-  overflow: visible;
+  overflow: hidden;
   padding-top: 0px;
   padding-right: 0px;
   padding-left: 0px;
@@ -166,13 +166,13 @@ a {
   font-size: 14px;
 }
 
-/*.holds-links:hover {
+.holds-links:hover {
   border-style: none none solid;
   border-width: 1px 1px 4px;
   border-color: #000;
   border-radius: 0px;
   text-decoration: none;
-}*/
+}
 
 .holds-links.active {
   text-decoration: overline;
@@ -537,6 +537,10 @@ a {
   color: hsla(262.22222222222223, 41.76%, 56.50%, 1.00);
 }
 
+.homegridtitle.goog {
+  color: hsla(145.11627906976744, 100.00%, 33.73%, 1.00);
+}
+
 .paragraph-2 {
   font-size: 16px;
 }
@@ -744,6 +748,7 @@ a {
 }
 
 .writeuptitle {
+  margin-top: 0px;
   margin-right: 200px;
   margin-left: 200px;
   font-family: 'Eina 01', sans-serif;
@@ -751,6 +756,7 @@ a {
   font-size: 40px;
   line-height: 51px;
   font-weight: 500;
+  text-align: left;
 }
 
 .bold-text {
@@ -805,6 +811,23 @@ a {
 .paragraph-7 {
   margin: 83px 200px 0px;
   font-family: 'Eina 01', sans-serif;
+}
+
+.hidden {
+  margin: 37px 200px 0px;
+  font-family: 'Eina 01', sans-serif;
+}
+
+.hiddentitle {
+  margin-top: 93px;
+  margin-right: 200px;
+  margin-left: 200px;
+  font-family: 'Eina 01', sans-serif;
+  color: hsla(22.823529411764703, 0.00%, 0.00%, 1.00);
+  font-size: 40px;
+  line-height: 51px;
+  font-weight: 500;
+  text-align: left;
 }
 
 @media (max-width: 991px) {
@@ -921,6 +944,18 @@ a {
     min-width: 100%;
     background-color: transparent;
   }
+  .paragraph-7 {
+    margin-right: 100px;
+    margin-left: 100px;
+  }
+  .hidden {
+    margin-right: 100px;
+    margin-left: 100px;
+  }
+  .hiddentitle {
+    margin-right: 100px;
+    margin-left: 100px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -993,6 +1028,10 @@ a {
     margin-right: 40px;
     margin-left: 40px;
   }
+  .column-3 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
   .columns-6 {
     margin-right: 40px;
     margin-left: 40px;
@@ -1030,11 +1069,51 @@ a {
     min-width: auto;
     background-color: #fff;
   }
+  .paragraph-7 {
+    margin-right: 60px;
+    margin-left: 60px;
+  }
+  .hidden {
+    margin-right: 40px;
+    margin-left: 40px;
+  }
+  .hiddentitle {
+    margin-right: 40px;
+    margin-left: 40px;
+  }
+  .column-4 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .column-5 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .column-6 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .column-7 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .column-8 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .column-9 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .column-10 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
 }
 
 @media (max-width: 479px) {
   .body {
-    overflow: visible;
+    overflow: hidden;
   }
   .desc {
     width: auto;
@@ -1099,6 +1178,7 @@ a {
     margin-left: 33px;
   }
   .paragraph-3 {
+    margin-right: 30px;
     margin-left: 30px;
   }
   .columns-3 {
@@ -1112,6 +1192,10 @@ a {
   .writeuphead {
     margin-right: 30px;
     margin-left: 30px;
+  }
+  .column-3 {
+    padding-right: 0px;
+    padding-left: 0px;
   }
   .columns-6 {
     margin-right: 33px;
@@ -1158,6 +1242,40 @@ a {
     min-width: 100%;
     background-color: #fff;
   }
+  .paragraph-7 {
+    margin-right: 33px;
+    margin-left: 89px;
+  }
+  .hidden {
+    margin-right: 30px;
+    margin-left: 30px;
+  }
+  .hiddentitle {
+    margin-right: 30px;
+    margin-left: 30px;
+    font-size: 35px;
+    line-height: 40px;
+  }
+  .column-6 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .column-7 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .column-8 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .column-9 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .column-10 {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
 }
 
 #w-node-4dd13f02c592-456c837f {
@@ -1184,6 +1302,21 @@ a {
   grid-row-end: 2;
   -ms-grid-column-align: start;
   justify-self: start;
+}
+
+@media screen and (max-width: 991px) {
+  #w-node-84a2d29e0e9f-456c837f {
+    -ms-grid-column: 2;
+    grid-column-start: 2;
+    -ms-grid-column-span: 1;
+    grid-column-end: 3;
+    -ms-grid-row: 1;
+    grid-row-start: 1;
+    -ms-grid-row-span: 1;
+    grid-row-end: 2;
+    -ms-grid-column-align: start;
+    justify-self: start;
+  }
 }
 
 @media screen and (max-width: 767px) {
