--- a/css/lucy-xu.webflow.css
+++ b/css/lucy-xu.webflow.css
@@ -22,7 +22,7 @@ a {
 }
 
 .body {
-  overflow: hidden;
+  overflow: visible;
   padding-top: 0px;
   padding-right: 0px;
   padding-left: 0px;
@@ -166,13 +166,13 @@ a {
   font-size: 14px;
 }
 
-.holds-links:hover {
+/*.holds-links:hover {
   border-style: none none solid;
   border-width: 1px 1px 4px;
   border-color: #000;
   border-radius: 0px;
   text-decoration: none;
-}
+}*/
 
 .holds-links.active {
   text-decoration: overline;
