--- a/css/lucy-xu.webflow.css
+++ b/css/lucy-xu.webflow.css
@@ -166,13 +166,13 @@ a {
   font-size: 14px;
 }
 
-/*.holds-links:hover {
+.holds-links:hover {
   border-style: none none solid;
   border-width: 1px 1px 4px;
   border-color: #000;
   border-radius: 0px;
   text-decoration: none;
-}*/
+}
 
 .holds-links.active {
   text-decoration: overline;
@@ -764,6 +764,10 @@ a {
   font-weight: 500;
 }
 
+.bold-text.sc {
+  color: hsla(22.823529411764703, 100.00%, 50.00%, 1.00);
+}
+
 .div-block {
   position: fixed;
   width: 100%;
@@ -778,17 +782,18 @@ a {
 }
 
 .casestudypix {
-  display: inline-block;
+  display: block;
   margin: 40px 400px;
 }
 
 .casestudypix.small {
   display: block;
-  margin-right: 300px;
-  margin-left: 300px;
+  margin-right: 400px;
+  margin-left: 400px;
 }
 
 .casestudypix.medium {
+  display: block;
   margin-right: 400px;
   margin-left: 400px;
 }
@@ -799,8 +804,8 @@ a {
 }
 
 .image-14 {
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 0px;
+  margin-left: 0px;
 }
 
 .paragraph-6 {
@@ -931,8 +936,8 @@ a {
     margin-left: 200px;
   }
   .casestudypix.medium {
-    margin-right: 250px;
-    margin-left: 250px;
+    margin-right: 200px;
+    margin-left: 200px;
   }
   .image-12 {
     max-width: 100%;
@@ -1048,18 +1053,24 @@ a {
     background-image: none;
   }
   .casestudypix {
-    margin-right: 60px;
-    margin-left: 60px;
+    display: block;
+    max-width: 100%;
+    margin-right: 100px;
+    margin-left: 100px;
   }
   .casestudypix.small {
     margin-right: 170px;
     margin-left: 170px;
   }
   .casestudypix.medium {
-    margin-right: 180px;
-    margin-left: 180px;
+    margin-right: 100px;
+    margin-left: 100px;
   }
   .image-12 {
+    max-width: 100%;
+  }
+  .image-14 {
+    display: inline-block;
     max-width: 100%;
   }
   .div-block-2 {
@@ -1215,13 +1226,17 @@ a {
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(100%, #fff), to(hsla(0, 0%, 100%, 0)));
     background-image: linear-gradient(180deg, #fff 100%, hsla(0, 0%, 100%, 0));
   }
+  .casestudypix {
+    margin-right: 30px;
+    margin-left: 30px;
+  }
   .casestudypix.small {
     margin-right: 60px;
     margin-left: 60px;
   }
   .casestudypix.medium {
-    margin-right: 60px;
-    margin-left: 60px;
+    margin-right: 30px;
+    margin-left: 30px;
   }
   .image-12 {
     max-width: 100%;
