--- a/css/lucy-xu.webflow.css
+++ b/css/lucy-xu.webflow.css
@@ -1312,13 +1312,13 @@ a {
     margin: 0px 40px 20px;
   }
   .bottompiece {
-    height: 223vh;
+    height: 650vh;
   }
 }
 
 @media (max-width: 479px) {
   .body {
-    overflow: hidden;
+    overflow: visible;
   }
   .desc {
     width: auto;
@@ -1523,7 +1523,7 @@ a {
     margin-bottom: 20px;
   }
   .bottompiece {
-    height: 221vh;
+    height: 450vh;
   }
 }
 
