--- a/css/lucy-xu.webflow.css
+++ b/css/lucy-xu.webflow.css
@@ -129,6 +129,14 @@ a {
   margin-left: 0px;
   font-family: 'Eina 01', sans-serif;
   font-size: 12px;
+}
+
+.subtitle-copy{
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+  font-family: 'Eina 01', sans-serif;
+  font-size: 12px;
   color:white;
 }
 
