--- a/css/lucy-xu.webflow.css
+++ b/css/lucy-xu.webflow.css
@@ -172,7 +172,7 @@ a {
   font-family: 'Eina 01', sans-serif;
   color: #fff;
   font-size: 6vw;
-  line-height: 88px;
+  line-height: 11vh;
   font-weight: 500;
 }
 
@@ -1004,7 +1004,7 @@ a {
     line-height: 29px;
   }
   .heading {
-    line-height: 54px;
+    line-height: 7vh;
   }
   .grid-2 {
     margin-right: 100px;
@@ -1198,7 +1198,7 @@ a {
   }
   .heading {
     font-size: 49px;
-    line-height: 67px;
+    line-height: 10vh;
   }
   .grid-2 {
     margin-top: 100px;
@@ -1434,7 +1434,7 @@ a {
   }
   .heading {
     font-size: 22px;
-    line-height: 39px;
+    line-height: 5vh;
   }
   .linskksksk {
     margin-left: 120px;
