--- a/css/lucy-xu.webflow.css
+++ b/css/lucy-xu.webflow.css
@@ -56,6 +56,9 @@
   padding-left: 0px;
   background-color: #181818;
 }
+.firstrow {
+  margin-bottom: 15px;
+}
 
 a {
   display: block;
@@ -66,6 +69,9 @@ a {
   font-size: 13px;
   font-weight: 400;
   text-decoration: none;
+}
+.text-block-3-copy {
+  color: #fff;
 }
 
 .body {
