--- a/css/lucy-xu.webflow.css
+++ b/css/lucy-xu.webflow.css
@@ -592,12 +592,14 @@ a {
 .link-block-4 {
   overflow: hidden;
   margin-top: 0px;
+  transition: opacity 0.3s;
+  -webkit-transition: opacity 0.3s;
+  opacity: 1;
 }
 
 .link-block-4:hover {
   overflow: visible;
-  border-radius: 5px;
-  opacity: 1;
+  opacity: .66;
 }
 
 .homegrid {
@@ -605,10 +607,20 @@ a {
   border-radius: 4px;
 }
 
+
 .homegridtext {
   overflow: hidden;
   margin-top: 7px;
+  /* transition: opacity 0.3s;
+  -webkit-transition: opacity 0.3s;
+  opacity: 1; */
 }
+
+/* .homegridtext:hover {
+  overflow: visible;
+  opacity: .66;
+}
+ */
 
 .paragraph {
   margin-bottom: 25px;
