--- a/css/lucy-xu.webflow.css
+++ b/css/lucy-xu.webflow.css
@@ -1493,10 +1493,14 @@ a {
   }
   .holds-links {
     font-size: 13px;
+    transition: opacity 0.3s;
+    -webkit-transition: opacity 0.3s;
+    opacity: 1;
   }
 
   .holds-links :hover{
     font-style:italic;
+    opacity: 66;
   }
   .holds-links.active.w--current {
     color: #7f69ff;
