--- a/css/lucy-xu.webflow.css
+++ b/css/lucy-xu.webflow.css
@@ -263,10 +263,15 @@ a {
 }
 
 .holds-links {
-  margin-top: 0px;
-  color: #fff;
-  font-size: 14px;
+  font-size: 13px;
+  transition: opacity 0.3s;
+  -webkit-transition: opacity 0.3s;
+  opacity: 1;
 }
+
+.holds-links :hover{
+  font-style:italic;
+  opacity: 66;
 
 /*.holds-links:hover {
   border-style: none none solid;
