--- a/css/lucy-xu.webflow.css
+++ b/css/lucy-xu.webflow.css
@@ -271,7 +271,7 @@ a {
 
 .holds-links :hover{
   font-style:italic;
-  opacity: 66;
+  opacity: 66;}
 
 /*.holds-links:hover {
   border-style: none none solid;
