--- a/css/lucyredesign.webflow.css
+++ b/css/lucyredesign.webflow.css
@@ -1496,6 +1496,11 @@ a {
     font-size: 22px;
     line-height: 39px;
   }
+  .image-9 {
+    width: 40vw;
+    max-width: 100%;
+    margin-bottom: 5vh;
+  }
   .linskksksk {
     margin-left: 120px;
   }
