--- a/css/lucyredesign.webflow.css
+++ b/css/lucyredesign.webflow.css
@@ -1505,7 +1505,7 @@ font-weight: 900;
 
 @media (max-width: 479px) {
   .body {
-    overflow: hidden;
+    overflow: visible;
   }
   .desc {
     width: auto;
