--- a/css/webflow.css
+++ b/css/webflow.css
@@ -57,7 +57,7 @@ body {
 img {
   max-width: 100%;
   vertical-align: middle;
-  display: inline-block;
+  /* display: inline-block; */
 }
 html.w-mod-touch * {
   background-attachment: scroll !important;
