--- a/css/lucyredesign.webflow.css
+++ b/css/lucyredesign.webflow.css
@@ -425,6 +425,26 @@ a {
   align-items: center;
 }
 
+.myworkbox {
+  position: fixed;
+  left: 7vw;
+  top: 15vh;
+  right: 7vw;
+  bottom: 15vh;
+width: 86vw;
+  display: flex;
+flex-flow: row wrap;
+justify-content: space-between;
+}
+
+.hi{
+  display: block;
+  max-width:200px;
+  /* max-height:95px; */
+  width: auto;
+  height: auto;
+}
+
 .myaboutbox{
   position: fixed;
   top: 15vh;
@@ -503,6 +523,10 @@ a {
   .popup{
     width: 70%;
   }
+
+    .myworkbox {
+   grid-template-columns: repeat(2,1fr);
+  }
 }
 
 @media (max-width: 991px) {
@@ -525,6 +549,10 @@ a {
     width: 86vw;
     padding-right: 9vw;
   }
+
+    .myworkbox {
+   grid-template-columns: repeat(2,1fr);
+  }
 }
 
 @media (max-width: 479px) {
@@ -542,6 +570,10 @@ a {
   }
   .mydescbox {
     padding-right: 0vw;
+  }
+
+    .myworkbox {
+   grid-template-columns: repeat(2,1fr);
   }
 }
 
