--- a/css/redesign-cc73cf.webflow.css
+++ b/css/redesign-cc73cf.webflow.css
@@ -1,3 +1,29 @@
+/* holy fuckk test?? */
+
+#container {
+  left: 0px;
+  top: -100px;
+  height: calc(100vh + 100px);
+  overflow: hidden;
+  position: relative;
+}
+
+#animate{
+  margin: 0 auto;
+  width: 50%;
+  overflow: visible;
+  position: relative;
+}
+
+#all{
+  overflow: hidden;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+}
+
+/* end */
+
 .blinking-cursor {
   font-family: Raisonne, sans-serif;
   font-weight: 100;
