--- a/css/redesign-cc73cf.webflow.css
+++ b/css/redesign-cc73cf.webflow.css
@@ -1,3 +1,22 @@
+/* hover effect */
+p .findmelink{
+  /* box-shadow: inset 0 -2px 0 0 lightgrey; */
+  /* display: inline-block; */
+  transition: all .2s ease-in-out;
+  color:#3a3d7c;
+  padding-top: 1px;
+  padding-bottom:1px;
+  box-sizing: border-box;
+}
+
+p .findmelink:hover{
+ border: none;
+ /* opacity: 0.5; */
+ color:#fbf5fb;
+ box-shadow: inset 0 -25px 0 0 #3a3d7c;
+}
+/* hover end */
+
 /* holy fuckk test?? */
 
 #container {
