--- a/css/redesign-cc73cf.webflow.css
+++ b/css/redesign-cc73cf.webflow.css
@@ -1,5 +1,5 @@
 /* hover effect */
-p .findmelink{
+a .findmelink{
   /* box-shadow: inset 0 -2px 0 0 lightgrey; */
   /* display: inline-block; */
   transition: all .2s ease-in-out;
@@ -9,7 +9,7 @@ p .findmelink{
   box-sizing: border-box;
 }
 
-p .findmelink:hover{
+a .findmelink:hover{
  border: none;
  /* opacity: 0.5; */
  color:#fbf5fb;
